# rust-aws-lambda-template

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo-generate.toml  deploy.sh  generated.README.md
infra/: samconfig.toml  template.yml
src/: main.rs
