[package]
name = "{{project-name}}"
version = "0.1.0"
authors = {{authors}}
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", tag = "v0.3.0", package = "lambda_runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "^1"